# humble-hook

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: embed.rs  env.rs  main.rs  product.rs  utils.rs
