[package]
name = "humble-hook"
version = "0.1.0"
edition = "2024"

[dependencies]
scraper = { version = "0.23.1" }
reqwest = { version = "0.12.15", features = ["blocking"] }
anyhow = { version = "1.0.97" }
serde_json = { version = "1.0.140" }
chrono = { version = "0.4.40", features = ["now"] }
html2md = { version = "0.2.15" }
once_cell = { version = "1.21.3" }
dotenvy = { version = "0.15.7" }

[profile.release]
incremental = false
lto = "fat"
opt-level = 3
panic = "unwind"
strip = "debuginfo"
